k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-golang-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-golang-app
  template:
    metadata:
      labels:
        app: my-golang-app
    spec:
      containers:
      - name: my-golang-app
        image: docker.io/pstpmn/golang-haxagonal-template:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: my-golang-app-service
spec:
  selector:
    app: my-golang-app
  ports:
  - name: http  # Add this
    port: 80
    targetPort: 8080
  type: ClusterIP
